demo-http-apps/demo-gw-multiple-listeners.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gw-multiple-listeners
spec:
  gatewayClassName: avi-lb
  listeners:
    - name: foo-http
      protocol: HTTP
      port: 80
      hostname: "*.mydomain.com"
    - name: bar-https
      protocol: HTTPS
      port: 443
      hostname: "*.mydomain.com"
      tls:
        certificateRefs:
          - kind: Secret
            group: ""
            name: System-Default-Cert-EC
